src/app/sort-by-date/sort-by-date.component.css
.sort-btn {
    background-color: #f8fafc;
    border-radius: 8px;
    text-transform: none;
    padding: 6px 12px;
    min-width: 180px;
    color: #374151; 
    border: 1px solid #e5e7eb;
  }
  
  .sort-content {
    display: flex;
    align-items: center;
    width: 100%;
  }
  
  .left-icon {
    margin-right: 8px;
    color: #6b7280;
  }
  
  .label {
    flex-grow: 1;
    font-size: 14px;
    font-weight: 500;
    color: #6b7280;
  }
  
  .right-icon {
    color: #6b7280;
  }
  

